--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "betvictor challenge",
   "main": "index.js",
   "scripts": {
+    "start": "NODE_ENV=production node ./index.js",
+    "dev": "NODE_ENV=development nodemon ./index.js --watch",
     "test": "jest"
   },
   "author": "sergio ibanez",
