--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "winston": "^3.8.2"
   },
   "devDependencies": {
+    "http-terminator": "^3.2.0",
     "jest": "^29.5.0",
     "nodemon": "^2.0.21",
     "supertest": "^6.3.3"
