--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "node-cache": "^5.1.2",
     "node-fetch": "^2.6.9",
     "winston": "^3.8.2"
   },
