--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "http-terminator": "^3.2.0",
     "jest": "^29.5.0",
     "nodemon": "^2.0.21",
+    "prettier": "^2.8.4",
     "supertest": "^6.3.3"
   },
   "nodemonConfig": {
